--- a/templates/lk-order.html
+++ b/templates/lk-order.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 {% load static %}
 
+<link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
+
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
