--- a/templates/index.html
+++ b/templates/index.html
@@ -90,11 +90,9 @@
 								<path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
 								<path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"/>
 							</svg>
-							{% if Step == 'Number' %}
-								Введите ваш номер
-							{% else %}
-								Введите код
-							{% endif %}
+							{% verbatim %}
+							{{Step === 'Number' ? 'Введите номер' : 'Введите код'}}
+							{% endverbatim %}
 							</error-message>
 						</small>
 						<error-message name="phone_format" class="fs_12 cake_pink text-center position-absolute bottom-0"></error-message>
@@ -103,13 +101,9 @@
 
 					<div class="modal-footer d-flex flex-column justify-content-between align-items-center text-center border-0 mx-5">
 						<p class="fs_12 cake_grey">
-							{% if Step == 'Number' %}
-								Нажимая на кнопку, вы соглашаетесь на обработку персональных данных в соответствии с политикой конфиденциальности
-							{% elif Step == 'Code' %}
-								Осталось времени: 05:00
-							{% else %}
-								<!-- Handle the else case here -->
-							{% endif %}
+							{% verbatim %}
+							{{Step === `Number` ? `Нажимая на кнопку, вы соглашаетесь на обработку персональных данных в соответствии с политикой конфиденциальности` : Step === 'Code' ? `Осталось времени: 05:00` : ``}}
+							{% endverbatim %}
 						</p>
 						<a href="#" v-if="Step === `Code`" @click.prevent="ToRegStep1" class="text-decoration-none cake_pink fs_12">изменить данные</a>
 					</div>
@@ -202,7 +196,9 @@
 					<error-message name="form" class="from__alert"></error-message>
 					<error-message name="topping" class="from__alert"></error-message>
 				</span>
+						{% verbatim %}
 						<span class="z-index-1 fs_40 cake_pink text-end mt-5" id="cost">{{ Cost }}₽</span>
+						{% endverbatim %}
 					</div>
 					<div class="d-flex align-items-center flex-wrap mb-3">
 						<span class="me-3 fs_40 cake_blue">Количество уровней</span>
@@ -363,22 +359,20 @@
 							</div>
 							<div class="col-12 col-lg-4 d-flex justify-content-center justify-content-lg-end">
 								<div class="cake__card p-4 position-relative cake_grey">
+									{% verbatim %}
 									<span class="cake__badge rounded-pill">?</span>
-									<span>Количество уровней: {{ DATA.Levels.Levels }}</span>
-									<span>Форма уровней: {{ DATA.Forms.Form }}</span>
-									<p>Топинг: {{ DATA.Toppings.Topping }}</p>
+									<span>Количество уровней: {{ DATA.Levels[Levels] }}</span>
+									<span>Форма уровней: {{ DATA.Forms[Form] }}</span>
+									<p>Топинг: {{ DATA.Toppings[Topping] }}</p>
 									<span>Дополнительно:</span>
 									<ul>
-										<li>Ягоды: {{ DATA.Berries.Berries. }}</li>
-										<li>Декор: {{ DATA.Decors.Decor }}</li>
+										<li>Ягоды: {{ DATA.Berries[Berries] }}</li>
+										<li>Декор: {{ DATA.Decors[Decor] }}</li>
 									</ul>
 									<span>
-										{% if Words == '' %}
-											'Без надписи'
-										{% else %}
-											Words
-										{% endif %}
+										{{ Words === '' ? 'Без надписи' : Words }}
 									</span>
+									{% endverbatim %}
 								</div>
 							</div>
 						</div>
@@ -410,7 +404,9 @@
 							</div>
 							<div class="col-12 col-md-6 d-flex flex-column align-items-center align-items-md-end mt-3 mt-md-0">
 								<div class="d-flex">
+									{% verbatim %}
 									<span class="cake_pink fs_40 fw-bold me-2">Итого: {{ Cost }}₽</span>
+									{% endverbatim %}
 								</div>
 								<button type="submit" class="btn btn_hover text-white rounded-pill mt-3 px-5 shadow-none cake__button cake__bg_pink">К оплате</button>
 							</div>
