--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,8 @@
 					<div class="modal-header border-0 py-0">
 						<label for="reg" class="modal-title font_Gogh fs_40 cake_blue" id="RegModalLabel">Вход / Регистрация</label>
 					</div>
-					<form class="d-none">
+					<form class="d-none" method="post">
+						{% csrf_token %}
 						<input v-model="RegInput" type="text" name="REG">
 						<button type="submit" ref="HiddenFormSubmitReg">reg</button>
 					</form>
