--- a/templates/lk.html
+++ b/templates/lk.html
@@ -101,16 +101,25 @@
 					</ul>
 					<ul class="list-group">
 						<li class="list-group-item border-0 py-61 position-relative">
-							<v-field v-model="Name" type="text" name="name_format" id="name" :readonly="!Edit" class="form-control my-2 i cake__textinput"></v-field>
-							<error-message name="name_format" class="position-absolute bottom-0 cake_pink fs_12"></error-message>
+        					{% if account.orders.first.name %}
+    						    <span class="form-control my-2 cake__textinput">{{ account.orders.first.name }}</span>
+    						{% else %}
+    						    <span class="form-control my-2 cake__textinput">No name</span>
+    						{% endif %}
 						</li>
 						<li class="list-group-item border-0 py-61 position-relative">
-							<v-field v-model="Phone" type="text" name="phone_format" id="phone" :readonly="!Edit" class="form-control my-2 cake__textinput"></v-field>
-							<error-message name="phone_format" class="position-absolute bottom-0 cake_pink fs_12"></error-message>
+    						{% if account.phone %}
+    						    <span class="form-control my-2 cake__textinput">{{ account.phone }}</span>
+    						{% else %}
+    						    <span class="form-control my-2 cake__textinput">No phone</span>
+    						{% endif %}
 						</li>
 						<li class="list-group-item border-0 py-61 position-relative">
-							<v-field v-model="Email" type="text" name="email_format" id="email" :readonly="!Edit" class="form-control my-2 cake__textinput"></v-field>
-							<error-message name="email_format" class="position-absolute bottom-0 cake_pink fs_12"></error-message>
+							{% if account.orders.first.email %}
+    						    <span class="form-control my-2 cake__textinput">{{ account.orders.first.email }}</span>
+    						{% else %}
+    						    <span class="form-control my-2 cake__textinput">No email</span>
+    						{% endif %}
 						</li>
 					</ul>
 				</div>
