--- a/templates/lk.html
+++ b/templates/lk.html
@@ -29,16 +29,16 @@
 		<div class="collapse navbar-collapse justify-content-end" id="navbar">
 			<ul class="navbar-nav">
 				<li class="nav-item me-5">
-					<a class="nav-link fw-lighter cake_blue" href="./index.html#step3">Создать торт</a>
+					<a class="nav-link fw-lighter cake_blue" href="/#step3">Создать торт</a>
 				</li>
 				<li class="nav-item me-5">
-					<a class="nav-link fw-lighter cake_blue" href="./index.html#step2">Каталог</a>
+					<a class="nav-link fw-lighter cake_blue" href="/#step2">Каталог</a>
 				</li>
 				<li class="nav-item me-5">
-					<a class="nav-link fw-lighter cake_blue" href="./index.html#step4">Оплата и доставка</a>
+					<a class="nav-link fw-lighter cake_blue" href="/#step4">Оплата и доставка</a>
 				</li>
 				<li class="nav-item me-5">
-					<a class="nav-link fw-lighter cake_blue" href="./index.html#Contacts">Контакты</a>
+					<a class="nav-link fw-lighter cake_blue" href="/#Contacts">Контакты</a>
 				</li>
 				<li class="nav-item d-block d-xl-flex flex-column align-items-end me-5">
 					<small class="fw-lighter text-decoration-none fs_12 cake_blue">8 (495) 000-00-00</small>
@@ -161,7 +161,7 @@
 				    </aside>
 				{% endfor %}
 			</section>
-			<button class="btn text-white rounded-pill align-self-end px-5 mt-3 shadow-none cake__button cake__bg_pink">Выйти</button>
+			<button class="btn text-white rounded-pill align-self-end px-5 mt-3 shadow-none cake__button cake__bg_pink"><a href="/">Выйти</a></button>
 		</div>
 	</div>
 </div>
